refactor: simplify stream expressions